Corrected developers/developer/name in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>jar</packaging>
     <developers>
         <developer>
-            <name><Veress Gábor</name>
+            <name>Veress Gábor</name>
             <email>veressgabi33@gmail.com</email>
             <organization>Faculty of Informatics, University of Debrecen</organization>
             <organizationUrl>http://www.inf.unideb.hu/</organizationUrl>
